Adicionado controles de envio de e-mail.

--- a/.env
+++ b/.env
@@ -12,3 +12,10 @@ DB_HOST="localhost"
 DB_USER="fastfeet"
 DB_PASS="fastfeet"
 DB_NAME="fastfeet"
+
+# E-mail
+
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT="2525"
+MAIL_USER="c5f07814c78520"
+MAIL_PASS="a03e966844b0c1"
